# Procyon

./: .gitignore  Makefile  README.md
backend/: Makefile  docker-compose.yml
backend/etc/api/: Dockerfile
backend/etc/api/env/: .dev.env
backend/etc/migrator/: Dockerfile  entrypoint.sh  wait-for.sh
backend/etc/migrator/fixtures/: constants.yaml  master.yaml
backend/etc/migrator/migrations/: 01-initial.yaml
backend/etc/postgres/env/: .dev.env
backend/src/procyon_api/: __main__.py  app.py  configs.py  constants.py  containers.py
backend/src/procyon_api/domain/: dataobjects.py  utils.py
backend/src/procyon_api/endpoints/: __init__.py  debug.py  document.py  manufacturer.py  test.py
backend/src/procyon_api/infrastructure/: __init__.py  (+2 more)
backend/src/requirements/: production.txt  pyproject.toml
file_engine/: .editorconfig  .env  Makefile  docker-compose.yml
file_engine/etc/api/: Dockerfile
file_engine/src/engine_api/: __main__.py  app.py  configs.py  constants.py  containers.py
file_engine/src/requirements/: pyproject.toml
frontend/: .editorconfig  .env  .eslintignore  .eslintrc.json  .prettierignore  .prettierrc.json  .stylelintrc.json  Dockerfile  Makefile  README.md  angular.json  docker-compose.yml  jest.config.js  karma.conf.js  package-lock.json  package.json  proxy.conf.docker.js  proxy.conf.js  setup-jest.ts  tailwind.config.js  tsconfig.json  tsconfig.spec.json
frontend/etc/app/: Dockerfile  entrypoint.sh
frontend/src/: _theme.scss  index.html  main.ts  styles.scss
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
frontend/src/core/: utility-types.ts
frontend/src/environments/: environment.prod.ts  environment.ts  index.ts  use-mocks.ts  without-mocks.ts
(+222 files in other folders)
