#
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#

[tool.poetry]
name = "procyon-api"
version = "1.0.0"
description = "Test management system"
authors = ["Mykyta Kamak"]

[tool.poetry.dependencies]
python = "3.9.9"
pydantic = "^1.8.2"
click = "~8.0.3"
fastapi = "^0.70.0"
dependency-injector = "^4.37.0"
uvicorn = "^0.15.0"
psycopg2-binary = "2.9.2"
redis = "^4.0.0"
requests = "^2.26.0"
aiofiles = "0.8.0"
SQLAlchemy = "^1.4.27"
SQLAlchemy-Utils = "^0.37.9"
pyjwt = "2.3.0"
Authlib = "0.15.5"
python-dateutil = "2.8.2"

[tool.poetry.dev-dependencies]
mypy = "~0.910"
flake8 = "~3.8.4"
wemake-python-styleguide = "~0.15.3"
isort = "~5.6.4"
black = "~20.8b1"
pytest = "~6.2.5"
coverage = "^5.5"
factory-boy = "^3.2.0"
pytest-factoryboy = "^2.1.0"
pytest-mock = "^3.6.1"
pytest-unordered = "^0.4.1"
wdb = "^3.3.0"
requests-mock = "~1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
